# pre_krr

./: .gitignore  README.md  pyproject.toml
src/tucmath/: compare.ipynb  data_datasets.py  data_downloader.py  data_preprocessing.py  example01-modify.ipynb  example01.ipynb  example02.ipynb  example03.ipynb  iterative_methods.py  kernels.py  low-rank.py  low_rank_methods.py  pkrr.py  results_chapter-compare-susy.ipynb  results_chapter-gamma-cod_rna.ipynb  results_chapter-gamma-higgs.ipynb  results_chapter-gamma-susy.ipynb  results_chapter-mu-cod_rna.ipynb  results_chapter-mu-higgs.ipynb  results_chapter-n.ipynb  results_chapter-rank.ipynb  results_chapter.ipynb  results_chapter_final_cod_rna.ipynb  results_chapter_final_higgs.ipynb  results_chapter_final_susy.ipynb  test-cg.ipynb  utils.py
