[project]
name = "tucmath"
version = "0.0.1"
authors = [
  { name="Samyar Modabber", email="samyar.modabber@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/samyarmodabber/pre_krr"
Issues = "https://github.com/samyarmodabber/pre_krr/issues"